[gd_scene load_steps=4 format=3 uid="uid://c4yepuo1ynkja"]

[ext_resource type="Script" path="res://UI/Review/ReviewQuestion.gd" id="1_qp4pk"]
[ext_resource type="PackedScene" uid="uid://binwfa5e0th2w" path="res://UI/HandCard2D.tscn" id="2_4bh34"]
[ext_resource type="Texture2D" uid="uid://djuibee23wyab" path="res://Logic/LevelEditor/LevelEditor/hexagon.png" id="2_qnh2o"]

[node name="ReviewQuestion" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qp4pk")

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2(900, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Container2" type="Container" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
texture = ExtResource("2_qnh2o")
expand_mode = 4

[node name="HandCard2D" parent="HBoxContainer" instance=ExtResource("2_4bh34")]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 1

[node name="QuestionBody" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="QuestionLabel" type="Label" parent="HBoxContainer/QuestionBody"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "How was it?"

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/QuestionBody"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 40)
layout_direction = 2
layout_mode = 2
placeholder_text = "..."

[node name="CustomOption" type="HBoxContainer" parent="HBoxContainer/QuestionBody"]
unique_name_in_owner = true
layout_mode = 2

[node name="CustomCB" type="CheckBox" parent="HBoxContainer/QuestionBody/CustomOption"]
unique_name_in_owner = true
layout_mode = 2

[node name="CustomOptionText" type="TextEdit" parent="HBoxContainer/QuestionBody/CustomOption"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Special Remark"

[node name="SliderContainer" type="HBoxContainer" parent="HBoxContainer/QuestionBody"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="SliderNumber" type="Label" parent="HBoxContainer/QuestionBody/SliderContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"

[node name="HSlider" type="HSlider" parent="HBoxContainer/QuestionBody/SliderContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 10.0
value = 5.0
ticks_on_borders = true

[node name="Container" type="Container" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[connection signal="value_changed" from="HBoxContainer/QuestionBody/SliderContainer/HSlider" to="." method="_on_h_slider_value_changed"]
